--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,12 @@ find_package(Protobuf CONFIG REQUIRED)
 find_package(absl CONFIG REQUIRED)
 find_package(gRPC CONFIG REQUIRED)
 
-add_executable(server src/async_server_node.cpp proto/distributionSystemService.grpc.pb.cc proto/distributionSystemService.pb.cc)
-add_executable(client src/async_client_node.cpp proto/distributionSystemService.grpc.pb.cc proto/distributionSystemService.pb.cc)
+add_executable(server src/async_server_node.cpp proto/distributionSystem.grpc.pb.cc proto/distributionSystem.pb.cc)
+add_executable(client src/async_client_node.cpp proto/distributionSystem.grpc.pb.cc proto/distributionSystem.pb.cc)
 
 target_link_libraries(server PRIVATE gRPC::grpc++ gRPC::grpc gRPC::grpc++_reflection protobuf::libprotobuf)
 target_link_libraries(client PRIVATE gRPC::grpc++ gRPC::grpc gRPC::grpc++_reflection protobuf::libprotobuf)
+
+#for testing all system
+add_executable(test src/testing.cpp proto/distributionSystem.grpc.pb.cc proto/distributionSystem.pb.cc)
+target_link_libraries(test PRIVATE gRPC::grpc++ gRPC::grpc gRPC::grpc++_reflection protobuf::libprotobuf)
