Убрал неработающий rpc и немного изменил структуру вызова rpc

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,25 +3,25 @@ version: '3.8'
 services:
   server1:
     build: .
-    command: ["./build/server", "0.0.0.0:50051", "server2:50052"]
+    command: ["./build/server", "$(pwd)", "0.0.0.0:50051", "server2:50052"]
     ports:
       - "50051:50051"
 
   server2:
     build: .
-    command: ["./build/server", "0.0.0.0:50052", "server3:50053"]
+    command: ["./build/server", "$(pwd)", "0.0.0.0:50052", "server3:50053"]
     ports:
       - "50052:50052"
 
   server3:
     build: .
-    command: ["./build/server", "0.0.0.0:50053"]
+    command: ["./build/server", "$(pwd)", "0.0.0.0:50053"]
     ports:
       - "50053:50053"
 
   client:
     build: .
-    command: ["./build/client", "server1:50051"]
+    command: ["./build/client_on_server", "server1:50051"]
     ports:
       - "50050:50050"
     depends_on:
