--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,8 @@ find_package(gRPC CONFIG REQUIRED)
 
 add_executable(server src/server.cpp src/server/async_server_node.cpp 
 src/client_on_server/async_client_node.cpp
+src/data_collection/data_collection_server.cpp
+src/data_collection/data_parsing_server.cpp
 proto/distributionSystem.grpc.pb.cc proto/distributionSystem.pb.cc)
 
 add_executable(client_on_server src/client_on_server.cpp src/client_on_server/async_client_node.cpp
